quick fix to fit more chords on small screens for now

--- a/src/app/chord-display/chord-display.component.scss
+++ b/src/app/chord-display/chord-display.component.scss
@@ -2,6 +2,10 @@
     display: block;
     margin-top: 3rem;
     margin-bottom: 3rem;
+
+    @media screen and (max-height: 600px) {
+        margin: 0;
+    }
 }
 
 .hm-chord-display__chords-list {
